--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -6,22 +6,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from box.exceptions import BoxValueError"
+    "import os\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Resarch\\\\2024\\\\UW-SoundSpeed\\\\research'"
+       "'d:\\\\Nik\\\\UW-SoundSpeed'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,16 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from box.exceptions import BoxValueError"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,11 +104,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import shutil\n",
     "import urllib.request as request\n",
     "import zipfile\n",
@@ -128,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,45 +134,54 @@
     "\n",
     "\n",
     "\n",
-    "    \n",
-    "    def download_file(self):\n",
-    "        if not os.path.exists(self.config.local_data_file):\n",
-    "            filename, headers = request.urlretrieve(\n",
-    "                url = self.config.source_URL,\n",
-    "                filename = self.config.local_data_file\n",
-    "            )\n",
-    "            logger.info(f\"{filename} download! with following info: \\n{headers}\")\n",
-    "        else:\n",
-    "            logger.info(f\"File already exists of size: {get_size(Path(self.config.local_data_file))}\")  \n",
+    "    #in case if data need to download\n",
+    "    # def download_file(self):\n",
+    "    #     try:\n",
+    "    #         if not self.config.local_data_file.exists():\n",
+    "    #             filename, headers = request.urlretrieve(\n",
+    "    #                 url=self.config.source_URL,\n",
+    "    #                 filename=str(self.config.local_data_file)\n",
+    "    #             )\n",
+    "    #             logger.info(f\"{filename} downloaded with following info: \\n{headers}\")\n",
+    "    #         else:\n",
+    "    #             logger.info(f\"File already exists at: {self.config.local_data_file}\")\n",
+    "    #     except Exception as e:\n",
+    "    #         logger.error(f\"Failed to download file due to {e}\")\n",
+    "    #         raise \n",
     "\n",
     "\n",
     "    \n",
     "    def extract_zip_file(self):\n",
-    "        \"\"\"\n",
-    "        zip_file_path: str\n",
-    "        Extracts the zip file into the data directory\n",
-    "        Function returns None\n",
-    "        \"\"\"\n",
-    "        unzip_path = self.config.unzip_dir\n",
-    "        os.makedirs(unzip_path, exist_ok=True)\n",
-    "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
-    "            zip_ref.extractall(unzip_path)"
+    "        try:\n",
+    "            with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
+    "                zip_ref.extractall(self.config.unzip_dir)\n",
+    "            logger.info(f\"Extracted zip file to {self.config.unzip_dir}\")\n",
+    "        except Exception as e:\n",
+    "            logger.error(f\"Failed to extract zip file due to {e}\")\n",
+    "            raise"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-03-10 19:11:55,412: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-03-10 19:11:55,415: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-03-10 19:11:55,416: INFO: common: created directory at: artifacts]\n",
-      "[2024-03-10 19:11:55,418: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2024-03-10 19:11:55,445: INFO: 1995845911: File copied to: artifacts/data_ingestion/data.zip]\n"
+      "[2024-03-18 13:29:38,827: INFO: common: YAML file: config\\config.yaml loaded successfully]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-03-18 13:29:38,843: INFO: common: YAML file: params.yaml loaded successfully]\n",
+      "[2024-03-18 13:29:38,845: INFO: common: Directory created at: artifacts]\n",
+      "[2024-03-18 13:29:38,847: INFO: common: Directory created at: artifacts/data_ingestion]\n",
+      "[2024-03-18 13:29:40,719: INFO: 1420110592: File copied to: artifacts/data_ingestion/data.zip]\n",
+      "[2024-03-18 13:30:00,170: INFO: 1420110592: Extracted zip file to artifacts/data_ingestion]\n"
      ]
     }
    ],
