--- a/research/02_data_transformation.ipynb
+++ b/research/02_data_transformation.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,21 +167,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-03-18 22:28:56,268: INFO: common: YAML file: config\\config.yaml loaded successfully]\n",
-      "[2024-03-18 22:28:56,274: INFO: common: YAML file: params.yaml loaded successfully]\n",
-      "[2024-03-18 22:28:56,276: INFO: common: Directory created at: artifacts]\n",
-      "[2024-03-18 22:28:56,278: INFO: common: Directory created at: artifacts\\data_transformation]\n"
+      "[2024-03-19 00:57:00,865: INFO: common: YAML file: config\\config.yaml loaded successfully]\n",
+      "[2024-03-19 00:57:00,870: INFO: common: YAML file: params.yaml loaded successfully]\n",
+      "[2024-03-19 00:57:00,871: INFO: common: Directory created at: artifacts]\n",
+      "[2024-03-19 00:57:00,873: INFO: common: Directory created at: artifacts\\data_transformation]\n"
      ]
     }
    ],
    "source": [
+    "from uwsoundspeed.logging import logger\n",
     "try:\n",
     "    # Initialize ConfigurationManager and get preprocessing configuration\n",
     "    config_manager = ConfigurationManager()\n",
@@ -199,6 +200,13 @@
     "    logger.error(\"An error occurred during data preprocessing\", exc_info=True)\n",
     "    raise e\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
