update model train notebook

--- a/research/03_knn_model_train.ipynb
+++ b/research/03_knn_model_train.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "'d:\\\\Resarch\\\\2024\\\\UW-SoundSpeed'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,15 +114,17 @@
     "    def get_preprocessing_config(self) -> PreprocessingConfig:\n",
     "        config = self.params.preprocessing \n",
     "        return PreprocessingConfig(\n",
-    "            numerical_features=config['numerical_features'],\n",
-    "            numerical_transformer=config['numerical_transformer'],\n",
-    "            categorical_features=config['categorical_features'],\n",
-    "            categorical_transformer=config['categorical_transformer']\n",
+    "            numerical_features=config.numerical_features,\n",
+    "            numerical_transformer=config.numerical_transformer,\n",
+    "            categorical_features=config.categorical_features,\n",
+    "            categorical_transformer=config.categorical_transformer\n",
+    "\n",
+    "           \n",
     "        )\n",
     "    \n",
     "    def get_pca_config(self) -> PCAConfig:\n",
-    "        pca = self.params.pca\n",
-    "        return PCAConfig(n_components=pca['n_components'])\n",
+    "        pca= self.params.preprocessing\n",
+    "        return PCAConfig(n_components=pca.pca_n_components)\n",
     "\n",
     "    def get_model_config(self) -> ModelConfig:\n",
     "        model = self.params.model\n",
@@ -171,52 +173,52 @@
     "    #         knn_model_path=self.config.prepare_knn_model['knn_model_path'],  \n",
     "    #     )\n",
     "    \n",
-    "    # def print_all_configs(self):\n",
-    "    #     print(\"Preprocessing Configuration:\")\n",
-    "    #     preprocessing_config = self.get_preprocessing_config()\n",
-    "    #     print(f\"  Numerical Features: {preprocessing_config.numerical_features}\")\n",
-    "    #     print(f\"  Numerical Transformer: {preprocessing_config.numerical_transformer}\")\n",
-    "    #     print(f\"  Categorical Features: {preprocessing_config.categorical_features}\")\n",
-    "    #     print(f\"  Categorical Transformer: {preprocessing_config.categorical_transformer}\\n\")\n",
+    "    def print_all_configs(self):\n",
+    "        print(\"Preprocessing Configuration:\")\n",
+    "        preprocessing_config = self.get_preprocessing_config()\n",
+    "        print(f\"  Numerical Features: {preprocessing_config.numerical_features}\")\n",
+    "        print(f\"  Numerical Transformer: {preprocessing_config.numerical_transformer}\")\n",
+    "        print(f\"  Categorical Features: {preprocessing_config.categorical_features}\")\n",
+    "        print(f\"  Categorical Transformer: {preprocessing_config.categorical_transformer}\\n\")\n",
     "        \n",
-    "    #     print(\"PCA Configuration:\")\n",
-    "    #     pca_config = self.get_pca_config()\n",
-    "    #     print(f\"  N Components: {pca_config.n_components}\\n\")\n",
+    "        print(\"PCA Configuration:\")\n",
+    "        pca_config = self.get_pca_config()\n",
+    "        print(f\"  N Components: {pca_config.n_components}\\n\")\n",
     "        \n",
-    "    #     print(\"Model Configuration:\")\n",
-    "    #     model_config = self.get_model_config()\n",
-    "    #     for model_name, params in model_config.__dict__.items():\n",
-    "    #         print(f\"  {model_name}: {params}\")\n",
-    "    #     print(\"\\n\")\n",
+    "        print(\"Model Configuration:\")\n",
+    "        model_config = self.get_model_config()\n",
+    "        for model_name, params in model_config.__dict__.items():\n",
+    "            print(f\"  {model_name}: {params}\")\n",
+    "        print(\"\\n\")\n",
     "        \n",
-    "    #     print(\"Grid Search Configuration:\")\n",
-    "    #     grid_search_config = self.get_grid_search_config()\n",
-    "    #     print(f\"  CV: {grid_search_config.cv}\")\n",
-    "    #     print(f\"  Scoring: {grid_search_config.scoring}\\n\")\n",
+    "        print(\"Grid Search Configuration:\")\n",
+    "        grid_search_config = self.get_grid_search_config()\n",
+    "        print(f\"  CV: {grid_search_config.cv}\")\n",
+    "        print(f\"  Scoring: {grid_search_config.scoring}\\n\")\n",
     "        \n",
-    "    #     print(\"Train Test Split Configuration:\")\n",
-    "    #     split_config = self.get_train_test_split_config()\n",
-    "    #     print(f\"  Test Size: {split_config.test_size}\")\n",
-    "    #     print(f\"  Random State: {split_config.random_state}\\n\")\n",
+    "        print(\"Train Test Split Configuration:\")\n",
+    "        split_config = self.get_train_test_split_config()\n",
+    "        print(f\"  Test Size: {split_config.test_size}\")\n",
+    "        print(f\"  Random State: {split_config.random_state}\\n\")\n",
     "        \n",
-    "    #     print(\"KNN Model Path (if applicable):\")\n",
-    "    #     base_model_config = self.get_prepare_base_model_config()\n",
-    "    #     print(f\"  KNN Model Path: {base_model_config.knn_model_path}\\n\")\n",
+    "        print(\"KNN Model Path (if applicable):\")\n",
+    "        base_model_config = self.get_prepare_base_model_config()\n",
+    "        print(f\"  KNN Model Path: {base_model_config.knn_model_path}\\n\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-03-11 21:37:09,733: INFO: common: YAML file: config\\config.yaml loaded successfully]\n",
-      "[2024-03-11 21:37:09,739: INFO: common: YAML file: params.yaml loaded successfully]\n",
-      "[2024-03-11 21:37:09,742: INFO: common: Directory created at: artifacts]\n",
+      "[2024-04-04 06:41:35,868: INFO: common: YAML file: config\\config.yaml loaded successfully]\n",
+      "[2024-04-04 06:41:35,881: INFO: common: YAML file: params.yaml loaded successfully]\n",
+      "[2024-04-04 06:41:35,883: INFO: common: Directory created at: artifacts]\n",
       "Preprocessing Configuration:\n",
       "  Numerical Features: ['Lat', 'Lon', 'SSS', 'SST', 'z']\n",
       "  Numerical Transformer: {'imputer_strategy': 'median', 'scaler': 'StandardScaler'}\n",
@@ -227,7 +229,7 @@
       "  N Components: 0.9\n",
       "\n",
       "Model Configuration:\n",
-      "  KNeighborsRegressor: {'n_neighbors': [1, 2, 3, 4, 5]}\n",
+      "  KNeighborsRegressor: {'n_neighbors': [1, 2]}\n",
       "\n",
       "\n",
       "Grid Search Configuration:\n",
@@ -239,7 +241,8 @@
       "  Random State: 42\n",
       "\n",
       "KNN Model Path (if applicable):\n",
-      "  KNN Model Path: artifacts/prepare_knn_model/knn_model.h5\n",
+      "[2024-04-04 06:41:35,885: INFO: common: Directory created at: artifacts\\prepare_knn_model]\n",
+      "  KNN Model Path: artifacts\\prepare_knn_model\\knn_model.h5\n",
       "\n"
      ]
     }
@@ -251,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +287,7 @@
     "    def prepare_pipeline(self):\n",
     "        prep_config = self.config_manager.get_preprocessing_config()\n",
     "        pca_config = self.config_manager.get_pca_config()\n",
-    "        model_config = self.config_manager.get_model_config().KNeighborsRegressor  \n",
+    "        model_config = self.config_manager.get_model_config()\n",
     "\n",
     "\n",
     "        # Numerical features pipeline\n",
@@ -308,8 +311,8 @@
     "        # Full pipeline with PCA and KNeighborsRegressor placeholder\n",
     "        self.pipeline = Pipeline(steps=[\n",
     "        ('preprocessor', preprocessor),\n",
-    "        ('pca', PCA(n_components=pca_config.n_components)),\n",
-    "        ('knn', KNeighborsRegressor(n_neighbors=model_config['n_neighbors'][0]))  \n",
+    "        ('pca', PCA(n_components=pca_config.n_components)),  \n",
+    "        ('knn', KNeighborsRegressor(n_neighbors=model_config.KNeighborsRegressor))\n",
     "        ])\n",
     "\n",
     "\n",
@@ -397,39 +400,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-03-12 02:03:45,723: INFO: common: YAML file: config\\config.yaml loaded successfully]\n",
-      "[2024-03-12 02:03:45,818: INFO: common: YAML file: params.yaml loaded successfully]\n",
-      "[2024-03-12 02:03:45,824: INFO: common: Directory created at: artifacts]\n",
-      "[2024-03-12 02:03:45,828: INFO: common: Directory created at: artifacts\\prepare_knn_model]\n",
-      "[2024-03-12 02:03:46,837: INFO: common: Directory created at: artifacts\\prepare_knn_model]\n",
-      "[2024-03-12 02:03:48,948: INFO: 3961613561: Data loaded successfully from artifacts\\data_ingestion\\raw\\complete_dataset_sample.pkl.]\n",
-      "[2024-03-12 02:03:49,271: INFO: 3961613561: Train-test split completed.]\n",
+      "[2024-04-04 06:44:56,926: INFO: common: YAML file: config\\config.yaml loaded successfully]\n",
+      "[2024-04-04 06:44:56,931: INFO: common: YAML file: params.yaml loaded successfully]\n",
+      "[2024-04-04 06:44:56,933: INFO: common: Directory created at: artifacts]\n",
+      "[2024-04-04 06:44:56,935: INFO: common: Directory created at: artifacts\\prepare_knn_model]\n",
+      "[2024-04-04 06:44:56,937: INFO: common: Directory created at: artifacts\\prepare_knn_model]\n",
+      "[2024-04-04 06:44:58,335: INFO: 1361444303: Data loaded successfully from artifacts\\data_ingestion\\raw\\complete_dataset.pkl.]\n",
+      "[2024-04-04 06:44:58,637: INFO: 1361444303: Train-test split completed.]\n",
       "Fitting 2 folds for each of 2 candidates, totalling 4 fits\n",
-      "[2024-03-12 02:04:53,117: INFO: 3961613561: R^2: 0.9775781232291486]\n",
-      "[2024-03-12 02:04:53,136: INFO: 3961613561: RMSE: 3.295134050491929]\n",
-      "[2024-03-12 02:04:53,138: INFO: common: Directory created at: artifacts\\prepare_knn_model]\n",
-      "[2024-03-12 02:04:53,314: INFO: 3961613561: Best KNN model saved to artifacts\\prepare_knn_model\\knn_model.h5]\n"
+      "[2024-04-04 06:45:55,210: INFO: 1361444303: R^2: 0.9775781232291486]\n",
+      "[2024-04-04 06:45:55,214: INFO: 1361444303: RMSE: 3.295134050491929]\n",
+      "[2024-04-04 06:45:55,215: INFO: common: Directory created at: artifacts\\prepare_knn_model]\n",
+      "[2024-04-04 06:45:55,419: INFO: 1361444303: Best KNN model saved to artifacts\\prepare_knn_model\\knn_model.h5]\n"
      ]
     }
    ],
    "source": [
-    "try:\n",
-    "    config_manager = ConfigurationManager(config_filepath=CONFIG_FILE_PATH, params_filepath=PARAMS_FILE_PATH)  # Ensure CONFIG_FILE_PATH and PARAMS_FILE_PATH are correctly defined\n",
-    "    prepare_data = KnnModelTrain(config_manager)  # Passing config_manager correctly\n",
+    "try:       \n",
+    "    config_manager = ConfigurationManager(config_filepath=CONFIG_FILE_PATH, params_filepath=PARAMS_FILE_PATH)\n",
+    "    \n",
+    "    # Directly use KnnModelTrain for all operations\n",
+    "    knn_model_train = KnnModelTrain(config_manager)\n",
+    "    \n",
+    "    knn_model_train.load_data()\n",
+    "    knn_model_train.prepare_pipeline()\n",
+    "    knn_model_train.train_test_split()\n",
+    "    knn_model_train.train_and_evaluate()\n",
+    "    knn_model_train.save_model()\n",
     "\n",
-    "    prepare_data.load_data()\n",
-    "    prepare_data.prepare_pipeline()\n",
-    "    prepare_data.train_test_split()\n",
-    "    prepare_data.train_and_evaluate()\n",
-    "    prepare_data.save_model()\n",
-    "    # Any additional methods\n",
     "except Exception as e:\n",
     "    logger.error(f\"Failed to prepare data and model due to: {e}\", exc_info=True)\n",
     "    raise e"
